--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "realrashid/sweet-alert": "^5.0"
+        "realrashid/sweet-alert": "^5.0",
+        "spatie/laravel-medialibrary": "9.0.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
